fixed letter spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2725,6 +2725,7 @@
 				margin:0px 0px 15px 0px;
 				padding:0;
 				font-weight: 400;
+				letter-spacing: 0em;
 			}
 			
 			.wrapper.style1 hr {
